--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "event_driven_node_kafka",
   "version": "1.0.0",
   "description": "Building event driven microservices in Node.js/Ts and kafka",
-  "type": "module",
   "main": "app.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jeffascript/bookworm-microservices-kafka-node.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node-dev ./src/app.ts",
+    "build": "tsc"
   },
   "keywords": [
     "event-driven",
@@ -25,5 +26,11 @@
   "dependencies": {
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.10",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.5.3"
   }
 }
