--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "homepage": "https://github.com/jeffascript/bookworm-microservices-kafka-node#readme",
   "dependencies": {
     "express": "^4.19.2",
-    "express-handlebars": "^7.1.3"
+    "express-handlebars": "^7.1.3",
+    "mysql2": "^3.10.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
